add junit and some fix